custom/themes/newspapers_lib_unb_ca/src/scss/_form.scss
.views-exposed-form {
  .form-actions {
    display: flex;
    align-self: flex-end;

    input {
      &:first-child {
        margin-right: .5rem;
      }
    }
  }
}

// Digital Title Listing view | submit button alignment
.digital-titles {
  .views-exposed-form {
    .form-row {
      .form-actions[data-drupal-selector="edit-actions"] {
        align-self: flex-start;
        margin-top: 1.7rem;
      }
    }
  }
}

// Autocomplete throbber: prevent overlapping with user input
.js input.form-autocomplete,
.js input.form-autocomplete.ui-autocomplete-loading {
  background-position: 99% center;
  padding-right: 1.2rem;
}

// Override for Barrio applying "form-control" on submit buttons
input[type="submit"].form-control {
  width: inherit;
}

// Serial holding form-inspired rules.
.field--widget-options-buttons fieldset legend {
    font-size: 1rem;
    font-weight: bold;
}
div[required="required"] > fieldset {
  legend span.js-form-required {
    &:after {
      background-image: none;
      color: $unb-red;
      content: '(required)';
      font-size: .925rem;
      font-weight: normal;
      vertical-align: baseline;
    }
  }

  .custom-checkbox,
  .custom-radio {
    input.error + label {
      color: $unb-red;
    }
  }
}
// Fix Barrio form-required + BS4 custom control checkbox.
.custom-checkbox,
.custom-radio {
  label.form-required {
    &:after {
      background-size: 9px;
      margin: 4px;
      width: 9px;
      height: 8px;
    }
  }
}
.custom-radio {
  label.form-required {
    &:after {
      background-size: 10px;
      width: 8px;
    }
  }
}
// Copy .form-control.is-invalid rule for textarea validation error.
textarea {
  &.form-control.error {
    border-color: #dc3545;
    padding-right: calc(1.5em + 0.75rem) !important;
    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' fill='none' stroke='%23dc3545' viewBox='0 0 12 12'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23dc3545' stroke='none'/%3e%3c/svg%3e");
    background-repeat: no-repeat;
    background-position: right calc(0.375em + 0.1875rem) center;
    background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);

    &:focus {
      box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.25);
    }
  }
}
// Adjustment re: Search form actions input fieldset & adjacent buttons
#views-exposed-form-search-search-page {
  @media (min-width: 1366px) {
    .form-actions {
      padding-bottom: 1.85rem;
    }
  }
}
#views-exposed-form-digital-page-lister-page-search {
  @media (min-width: 1360px) {
    .form-actions {
      padding-bottom: 1.85rem;
    }
  }
}

